...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity"
        tools:layout_editor_absoluteX="-38dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:onClick="onClickTravelModeBtn"
        android:text="Driving"
...
        android:onClick="onClickOpenProfileBtn"
        android:text="PROFILE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/order_history_button"
        android:layout_width="165dp"
        android:layout_height="50dp"
        android:layout_marginStart="232dp"
        android:layout_marginBottom="64dp"
        android:onClick="onClickToOrderHistory"
        android:text="Order History"
...
